fluxcd/infrastructure/services/overlays/production/phase-03-core/apt-cacher-ng/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: apt-cacher-ng
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: apt-cacher-ng
          image: docker.io/prplanit/apt-cacher-ng-oci:3.7.4-v0.1
          resources:
            limits:
              memory: 256Mi
              cpu: "500m"
            requests:
              memory: 16Mi
              cpu: "10m"
          volumeMounts:
            - name: hyrule-castle-apt-cacher-ng-cache
              mountPath: /var/cache/apt-cacher-ng
            - name: hyrule-castle-apt-cacher-ng-logs
              mountPath: /var/log/apt-cacher-ng
  volumeClaimTemplates:
    - metadata:
        name: hyrule-castle-apt-cacher-ng-cache
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 100Gi
    - metadata:
        name: hyrule-castle-apt-cacher-ng-logs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 10Gi
