fluxcd/infrastructure/services/overlays/production/phase-03-core/apt-cacher-ng/service-apt-cacher-ng-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: apt-cacher-ng
  labels:
    policy.prplanit.com/ingress: "true"
