fluxcd/infrastructure/services/overlays/production/phase-03-core/apt-cacher-ng/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apt-cacher-ng-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Business Apps (Hyrule Castle🏰)"
      conditions:
        - "[STATUS] == 406"
        - "[RESPONSE_TIME] < 5000"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "apt.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: apt-cacher-ng
          port: 3142
